--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-        NDI
+        <h1>NDI</h1>
 
         <script src="index.js"></script>
 		<div>
@@ -16,3 +16,4 @@
 		</div>
 	</body>
 </html>
+
