--- a/index.html
+++ b/index.html
@@ -2,14 +2,39 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title> Une petite calculatrice </title>
+		<title> index </title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="icon" type="image/png" href="favicon.png">
+        <script src="index.js"></script>
 	</head>
 
 	<body>
-        NDI
+        <header>
+            <nav>
+                <div class="boxPuce">
+                    <li id="puceSauveteur"><a>Sauveteur</a></li>
+                    <div id="boxPuceSauveteur">
+                        <li>Sauveteur</li>
+                        <li>Sauveteur</li>
+                        <li>Sauveteur</li>
+                        <li>Sauveteur</li>
+                        <li>Sauveteur</li>
+                    </div>
+                </div>
 
-        <script src="index.js"></script>
+                <li>Sauveteur</li>
+                <li>Sauveteur</li>
+                <li>Sauveteur</li>
+                <li>Sauveteur</li>
+                <li>Sauveteur</li>
+            </nav>
+
+        </header>
+
+
+
+        <footer>
+
+        </footer>
 	</body>
 </html>
