--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 
+<!--indentation automatique : selectionner, ctrl+K puis ctrl+F-->
+
 <head>
 	<meta charset="utf-8" />
 	<title> Une petite calculatrice </title>
@@ -42,23 +44,48 @@
 									data-smartmenus-id="16384728868509744">
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6765">
 										<a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/"
-											class="elementor-item" tabindex="-1">Qui sommes-nous</a></li>
+											class="elementor-item" tabindex="-1">Qui sommes-nous</a>
+									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6766">
 										<a href="https://sauveteurdudunkerquois.fr/presse/" class="elementor-item"
-											tabindex="-1">Presse</a></li>
+											tabindex="-1">Presse</a>
+									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6808">
 										<a href="https://sauveteurdudunkerquois.fr/sites-amis/" class="elementor-item"
-											tabindex="-1">Sites amis</a></li>
+											tabindex="-1">Sites amis</a>
+									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6809">
 										<a href="https://sauveteurdudunkerquois.fr/plan-du-site/" class="elementor-item"
-											tabindex="-1">Plan du site</a></li>
+											tabindex="-1">Plan du site</a>
+									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7804">
 										<a href="https://sauveteurdudunkerquois.fr/lettre-hebdomadaire/"
-											class="elementor-item" tabindex="-1">Lettre hebdomadaire</a></li>
+											class="elementor-item" tabindex="-1">Lettre hebdomadaire</a>
+									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8295">
 										<a href="https://sauveteurdudunkerquois.fr/exprimez-vous/"
-											class="elementor-item" tabindex="-1">Exprimez-vous</a></li>
+											class="elementor-item" tabindex="-1">Exprimez-vous</a>
+									</li>
 								</ul>
+
+
+								<ul class="clr" aria-label="Social links">
+
+									<li class="oceanwp-twitter"><a href="http://boutelierphili1"
+											aria-label="Twitter (opens in a new tab)" target="_blank"
+											rel="noopener noreferrer"><i class=" fab fa-twitter" aria-hidden="true"
+												role="img"></i></a></li>
+									<li class="oceanwp-facebook"><a
+											href="https://www.facebook.com/groups/938396409644949"
+											aria-label="Facebook (opens in a new tab)" target="_blank"
+											rel="noopener noreferrer"><i class=" fab fa-facebook" aria-hidden="true"
+												role="img"></i></a></li>
+									<li class="oceanwp-email"><a href="mailto:sauveteurdudunkerquois@gmail.com"
+											aria-label="Send email (opens in your application)" target="_self"><i
+												class=" icon-envelope" aria-hidden="true" role="img"></i></a></li>
+								</ul>
+
+
 							</nav>
 						</div>
 					</div>
@@ -70,3 +97,4 @@
 </body>
 
 </html>
+
