--- a/index.html
+++ b/index.html
@@ -21,78 +21,49 @@
 		<p>test !</p>
 	</div>
 	<footer>
-
-		<div class="elementor-container elementor-column-gap-default">
-			<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-06ad5ba"
-				data-id="06ad5ba" data-element_type="column">
-				<div class="elementor-widget-wrap elementor-element-populated">
-					<div class="elementor-element elementor-element-79caa3d elementor-nav-menu--dropdown-tablet elementor-nav-menu__text-align-aside elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-nav-menu"
-						data-id="79caa3d" data-element_type="widget"
-						data-settings="{&quot;layout&quot;:&quot;horizontal&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;<i class=\&quot;fas fa-caret-down\&quot;><\/i>&quot;,&quot;library&quot;:&quot;fa-solid&quot;},&quot;toggle&quot;:&quot;burger&quot;}"
-						data-widget_type="nav-menu.default">
-						<div class="elementor-widget-container">
-							<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Permuter le menu"
-								aria-expanded="false">
-								<i aria-hidden="true" role="presentation"
-									class="elementor-menu-toggle__icon--open eicon-menu-bar"></i><i aria-hidden="true"
-									role="presentation" class="elementor-menu-toggle__icon--close eicon-close"></i>
-								<span class="elementor-screen-only">Menu</span>
-							</div>
-							<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation"
-								aria-hidden="true">
-								<ul id="menu-2-79caa3d" class="elementor-nav-menu"
-									data-smartmenus-id="16384728868509744">
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6765">
-										<a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/"
-											class="elementor-item" tabindex="-1">Qui sommes-nous</a>
-									</li>
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6766">
-										<a href="https://sauveteurdudunkerquois.fr/presse/" class="elementor-item"
-											tabindex="-1">Presse</a>
-									</li>
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6808">
-										<a href="https://sauveteurdudunkerquois.fr/sites-amis/" class="elementor-item"
-											tabindex="-1">Sites amis</a>
-									</li>
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6809">
-										<a href="https://sauveteurdudunkerquois.fr/plan-du-site/" class="elementor-item"
-											tabindex="-1">Plan du site</a>
-									</li>
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7804">
-										<a href="https://sauveteurdudunkerquois.fr/lettre-hebdomadaire/"
-											class="elementor-item" tabindex="-1">Lettre hebdomadaire</a>
-									</li>
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8295">
-										<a href="https://sauveteurdudunkerquois.fr/exprimez-vous/"
-											class="elementor-item" tabindex="-1">Exprimez-vous</a>
-									</li>
-								</ul>
+		<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true">
+			<ul id="menu-2-79caa3d" class="elementor-nav-menu" data-smartmenus-id="16384728868509744">
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6765">
+					<a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/" class="elementor-item"
+						tabindex="-1">Qui sommes-nous</a>
+				</li>
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6766">
+					<a href="https://sauveteurdudunkerquois.fr/presse/" class="elementor-item" tabindex="-1">Presse</a>
+				</li>
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6808">
+					<a href="https://sauveteurdudunkerquois.fr/sites-amis/" class="elementor-item" tabindex="-1">Sites
+						amis</a>
+				</li>
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6809">
+					<a href="https://sauveteurdudunkerquois.fr/plan-du-site/" class="elementor-item" tabindex="-1">Plan
+						du site</a>
+				</li>
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7804">
+					<a href="https://sauveteurdudunkerquois.fr/lettre-hebdomadaire/" class="elementor-item"
+						tabindex="-1">Lettre hebdomadaire</a>
+				</li>
+				<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8295">
+					<a href="https://sauveteurdudunkerquois.fr/exprimez-vous/" class="elementor-item"
+						tabindex="-1">Exprimez-vous</a>
+				</li>
+			</ul>
 
 
-								<ul class="clr" aria-label="Social links">
+			<ul class="clr" aria-label="Social links">
 
-									<li class="oceanwp-twitter"><a href="http://boutelierphili1"
-											aria-label="Twitter (opens in a new tab)" target="_blank"
-											rel="noopener noreferrer"><i class=" fab fa-twitter" aria-hidden="true"
-												role="img"></i></a></li>
-									<li class="oceanwp-facebook"><a
-											href="https://www.facebook.com/groups/938396409644949"
-											aria-label="Facebook (opens in a new tab)" target="_blank"
-											rel="noopener noreferrer"><i class=" fab fa-facebook" aria-hidden="true"
-												role="img"></i></a></li>
-									<li class="oceanwp-email"><a href="mailto:sauveteurdudunkerquois@gmail.com"
-											aria-label="Send email (opens in your application)" target="_self"><i
-												class=" icon-envelope" aria-hidden="true" role="img"></i></a></li>
-								</ul>
+				<li class="oceanwp-twitter"><a href="http://boutelierphili1" aria-label="Twitter (opens in a new tab)"
+						target="_blank" rel="noopener noreferrer"><i class=" fab fa-twitter" aria-hidden="true"
+							role="img"></i></a></li>
+				<li class="oceanwp-facebook"><a href="https://www.facebook.com/groups/938396409644949"
+						aria-label="Facebook (opens in a new tab)" target="_blank" rel="noopener noreferrer"><i
+							class=" fab fa-facebook" aria-hidden="true" role="img"></i></a></li>
+				<li class="oceanwp-email"><a href="mailto:sauveteurdudunkerquois@gmail.com"
+						aria-label="Send email (opens in your application)" target="_self"><i class=" icon-envelope"
+							aria-hidden="true" role="img"></i></a></li>
+			</ul>
 
 
-							</nav>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
+		</nav>
 	</footer>
 </body>
 
