--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <h1>NDI</h1>
-    <header></header>
+    <header>
+        <img="ndl2021\Banniere.PNG"></header>
     <nav></nav>
     <section></section>
 
