--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <h1>NDI</h1>
     <header>
-        <img="ndl2021\Banniere.PNG"></header>
+        <img="ndl2021\Banniere.PNG">
+    </header>
     <nav></nav>
     <section></section>
 
