--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Une petite calculatrice </title>
+    <title> Accueil &#8902; Sauveteurs du dunkerquois </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
