--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>NDI</h1>
     <header>
-        <img src="Banniere.PNG">
+        <img src="Banniere.PNG" id="Banniere">
     </header>
     <nav></nav>
     <section></section>
