--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <footer>
         <nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true">
-            <ul id="menu-2-79caa3d" class="elementor-nav-menu" data-smartmenus-id="16384728868509744">
+            <ul id="liens" data-smartmenus-id="16384728868509744">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6765">
                     <a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/" class="elementor-item" tabindex="-1">Qui sommes-nous</a>
                 </li>
