--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
+    <img src="Banniere.PNG" id="Banniere">
     <h1>NDI</h1>
-    <header>
-        <img src="Banniere.PNG" id="Banniere">
-    </header>
+    <header></header>
     <nav></nav>
     <section></section>
 
