--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
     <footer>
         <nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true">
             <ul id="liens" data-smartmenus-id="16384728868509744">
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6765">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/" class="elementor-item" tabindex="-1">Qui sommes-nous</a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6766">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/presse/" class="elementor-item" tabindex="-1">Presse</a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6808">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/sites-amis/" class="elementor-item" tabindex="-1">Sites
 						amis</a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6809">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/plan-du-site/" class="elementor-item" tabindex="-1">Plan
 						du site</a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7804">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/lettre-hebdomadaire/" class="elementor-item" tabindex="-1">Lettre hebdomadaire</a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8295">
+                <li class="liensIndividuels">
                     <a href="https://sauveteurdudunkerquois.fr/exprimez-vous/" class="elementor-item" tabindex="-1">Exprimez-vous</a>
                 </li>
             </ul>
