--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <img src="Banniere.PNG" id="Banniere">
-    <h1>NDI</h1>
+    <h1 id="Title">NDI</h1>
     <header></header>
     <nav></nav>
     <section></section>
