--- a/index.html
+++ b/index.html
@@ -11,38 +11,34 @@
 </head>
 
 <body>
-    <img src="Banniere.PNG" id="Banniere">
-    <h1 id="Title">NDI</h1>
-	<div class="placeholder"></div>
-    <header></header>
+    <h1>!GAFAM</h1>
+    <header>
+        <img src="Banniere.PNG">
+    </header>
     <nav></nav>
     <section></section>
 
-    <script src="index.js"></script>
-    <div>
-        <p>test 2 !</p>
-    </div>
     <footer>
         <nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" role="navigation" aria-hidden="true">
-            <ul id="liens" data-smartmenus-id="16384728868509744">
-                <li class="liensIndividuels">
+            <ul id="liens" class="liensIndividuels" data-smartmenus-id="16384728868509744">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/qui-sommes-nous/" class="elementor-item" tabindex="-1">Qui sommes-nous</a>
                 </li>
-                <li class="liensIndividuels">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/presse/" class="elementor-item" tabindex="-1">Presse</a>
                 </li>
-                <li class="liensIndividuels">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/sites-amis/" class="elementor-item" tabindex="-1">Sites
 						amis</a>
                 </li>
-                <li class="liensIndividuels">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/plan-du-site/" class="elementor-item" tabindex="-1">Plan
 						du site</a>
                 </li>
-                <li class="liensIndividuels">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/lettre-hebdomadaire/" class="elementor-item" tabindex="-1">Lettre hebdomadaire</a>
                 </li>
-                <li class="liensIndividuels">
+                <li >
                     <a href="https://sauveteurdudunkerquois.fr/exprimez-vous/" class="elementor-item" tabindex="-1">Exprimez-vous</a>
                 </li>
             </ul>
@@ -58,10 +54,21 @@
 							aria-hidden="true" role="img"></i></a></li>
             </ul>
 
+            <ul class="citation" >
+                <p>
+                    Les sauvetages? Mais tout le monde en fait … <br/>
+                    Si un homme tombe dans la « Baille »<br/>
+                    est ce qu’on ne va pas le chercher?<br/>
+                    Il n’y a à cela aucun mérite…
+                </p>
+            </ul>
+
+            <marquee>&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;HEAD&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</marquee>
+
 
         </nav>
     </footer>
-	<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
