--- a/index.html
+++ b/index.html
@@ -386,6 +386,18 @@
             dort dans les archives de la Bibliothèque Nationale de France.<br/> Il décide de mettre en lumière le parcours de ces hommes guidés par l’abnégation, l’humanisme et le courage, avec un mépris indéniable pour les risques encourus.<br/> D’abord
             hébergées par l’association Généalogie Histoire du Dunkerquois (GHDK), les données collectées ne peuvent cependant pas être suffisamment mises en valeur et ce sera la création du site des « Sauveteurs du Dunkerquois », site indépendant permettant
             une interactivité entre les pages.<br/> Un premier site est développé mais est vite rattrapé par le volume des données disponibles. Un changement logiciel s’impose. Le 25 octobre 2021 celui-ci voit le jour.<br/>
+                
+            Ce site trouve ses origines dans les recherches généalogiques entreprises par Philippe Boutelier. La généalogie n’est pas pour lui une course à l’arbre le plus gros , il préfère s’intéresser aux personnes et à leur vie. C’est ainsi que, en 2012, il se
+            penche sur l’histoire de Joseph Taylor, sauveteur du Dunkerquois, grand-oncle préféré de son père.<br/> ll s’aperçoit alors, à travers la carrière de ce sauveteur que l’histoire de ces personnes d’exception (de Bray-Dunes à Grand-Fort-Philippe)
+            dort dans les archives de la Bibliothèque Nationale de France.<br/> Il décide de mettre en lumière le parcours de ces hommes guidés par l’abnégation, l’humanisme et le courage, avec un mépris indéniable pour les risques encourus.<br/> D’abord
+            hébergées par l’association Généalogie Histoire du Dunkerquois (GHDK), les données collectées ne peuvent cependant pas être suffisamment mises en valeur et ce sera la création du site des « Sauveteurs du Dunkerquois », site indépendant permettant
+            une interactivité entre les pages.<br/> Un premier site est développé mais est vite rattrapé par le volume des données disponibles. Un changement logiciel s’impose. Le 25 octobre 2021 celui-ci voit le jour.<br/>
+
+            Ce site trouve ses origines dans les recherches généalogiques entreprises par Philippe Boutelier. La généalogie n’est pas pour lui une course à l’arbre le plus gros , il préfère s’intéresser aux personnes et à leur vie. C’est ainsi que, en 2012, il se
+            penche sur l’histoire de Joseph Taylor, sauveteur du Dunkerquois, grand-oncle préféré de son père.<br/> ll s’aperçoit alors, à travers la carrière de ce sauveteur que l’histoire de ces personnes d’exception (de Bray-Dunes à Grand-Fort-Philippe)
+            dort dans les archives de la Bibliothèque Nationale de France.<br/> Il décide de mettre en lumière le parcours de ces hommes guidés par l’abnégation, l’humanisme et le courage, avec un mépris indéniable pour les risques encourus.<br/> D’abord
+            hébergées par l’association Généalogie Histoire du Dunkerquois (GHDK), les données collectées ne peuvent cependant pas être suffisamment mises en valeur et ce sera la création du site des « Sauveteurs du Dunkerquois », site indépendant permettant
+            une interactivité entre les pages.<br/> Un premier site est développé mais est vite rattrapé par le volume des données disponibles. Un changement logiciel s’impose. Le 25 octobre 2021 celui-ci voit le jour.<br/>
         </p>
     </div>
 
