--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </header>
 
         <div>
-                <p class=easterEgg>
+                <p>
                 Ce site trouve ses origines dans les recherches généalogiques entreprises par Philippe Boutelier. La généalogie n’est pas pour lui une course à l’arbre le plus gros , il préfère s’intéresser aux personnes et à leur vie. C’est ainsi que, en 2012, il se
                 penche sur l’histoire de Joseph Taylor, sauveteur du Dunkerquois, grand-oncle préféré de son père.<br/> ll s’aperçoit alors, à travers la carrière de ce sauveteur que l’histoire de ces personnes d’exception (de Bray-Dunes à Grand-Fort-Philippe)
                 dort dans les archives de la Bibliothèque Nationale de France.<br/> Il décide de mettre en lumière le parcours de ces hommes guidés par l’abnégation, l’humanisme et le courage, avec un mépris indéniable pour les risques encourus.<br/> D’abord
@@ -417,7 +417,7 @@
                 <ul class="liens">
                         <li class="liContact"><a href="http://boutelierphili1">Twitter <img class="imgContact" src="twitter.png"></a></li>
                         <li class="liContact"><a href="https://www.facebook.com/groups/938396409644949">Facebook <img class="imgContact" src="facebook.png"></a></li>
-                        <li class="liContact"><a href="mailto:sauveteurdudunkerquois@gmail.com">Email <img class="imgContact" src="email.png"></a></li>
+                        <li class="liContact"><a href="mailto:sauveteurdudunkerquois@gmail.com">Email </a><img class="imgContact" src="email.png" id="easterEgg"></li>
                 </ul>
                 </nav>
         </footer>
