--- a/index.html
+++ b/index.html
@@ -424,6 +424,10 @@
     </div>
 
 	<script src="index.js"></script>
+
+        <div class=detect>
+                <a href="Gremlin.png"></a>
+        </div>
 </body>
 
 </html>
